<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view_cr">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_crdashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_bookroom"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_bookroom" />
        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_records" />
        <item
            android:id="@+id/nav_routine"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_routine" />
        <item
            android:id="@+id/nav_changepassword"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_changepassword" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
    </group>
</menu>