<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_studentdashboard">

    <fragment
        android:id="@+id/nav_studentdashboard"
        android:name="com.andromeda.cms.ui.studentDashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/studentdashboard" />

    <fragment
        android:id="@+id/nav_routine"
        android:name="com.andromeda.cms.ui.routineFragment"
        android:label="@string/menu_routine"
        tools:layout="@layout/fragment_routine" />

    <fragment
        android:id="@+id/nav_changepassword"
        android:name="com.andromeda.cms.ui.changePasswordFragment"
        android:label="@string/menu_changepassword"
        tools:layout="@layout/fragment_changepassword" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.andromeda.cms.ui.logoutFragment"
        android:label="@string/menu_logout" />

</navigation>