<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.miscListFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/miscChoices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/buildingTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/roomTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/departmentTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department_text" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/programTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_text" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/miscViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miscChoices" />

</androidx.constraintlayout.widget.ConstraintLayout>