<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bookRoomFragment" >

    <ScrollView
        android:id="@+id/bookRoomScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/roomNoTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center_vertical"
                android:minWidth="100dp"
                android:minHeight="40dp"
                android:text="@string/table_header_room"
                app:layout_constraintStart_toStartOf="@+id/timePickerTextView"
                app:layout_constraintTop_toBottomOf="@+id/searchRoomButton" />

            <Spinner
                android:id="@+id/roomSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:minHeight="40dp"
                app:layout_constraintStart_toStartOf="@+id/timeSpinner"
                app:layout_constraintTop_toTopOf="@+id/roomNoTextView" />

            <TextView
                android:id="@+id/routineIDTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:minWidth="100dp"
                android:minHeight="40dp"
                android:text="@string/table_header_routine"
                app:layout_constraintStart_toStartOf="@+id/roomNoTextView"
                app:layout_constraintTop_toBottomOf="@+id/roomNoTextView" />

            <Spinner
                android:id="@+id/routineSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:minHeight="40dp"
                app:layout_constraintStart_toStartOf="@+id/roomSpinner"
                app:layout_constraintTop_toTopOf="@+id/routineIDTextView" />

            <TextView
                android:id="@+id/courseIDTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:minWidth="100dp"
                android:minHeight="40dp"
                android:text="@string/table_header_course"
                app:layout_constraintStart_toStartOf="@+id/routineIDTextView"
                app:layout_constraintTop_toBottomOf="@+id/routineIDTextView" />

            <EditText
                android:id="@+id/courseIDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/course_id_hint"
                android:inputType="text"
                android:lines="1"
                android:maxLength="7"
                android:minWidth="150dp"
                android:minHeight="40dp"
                app:layout_constraintStart_toStartOf="@+id/routineSpinner"
                app:layout_constraintTop_toTopOf="@+id/courseIDTextView"
                tools:ignore="LabelFor"
                tools:maxLength="7" />

            <TextView
                android:id="@+id/notesTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:minWidth="100dp"
                android:minHeight="40dp"
                android:text="@string/table_header_notes"
                app:layout_constraintStart_toStartOf="@+id/courseIDTextView"
                app:layout_constraintTop_toBottomOf="@+id/courseIDTextView" />

            <EditText
                android:id="@+id/notesEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/notes_hint"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxWidth="150dp"
                android:maxLength="40"
                android:maxLines="4"
                android:minWidth="150dp"
                android:minHeight="40dp"
                app:layout_constraintStart_toStartOf="@+id/courseIDEditText"
                app:layout_constraintTop_toTopOf="@+id/notesTextView"
                tools:ignore="LabelFor"
                tools:maxLength="40" />

            <Button
                android:id="@+id/bookRoomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/menu_bookroom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notesTextView" />

            <TextView
                android:id="@+id/buildingNoTextView"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="55dp"
                android:gravity="center_vertical"
                android:minWidth="100dp"
                android:minHeight="40dp"
                android:text="@string/building_number_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/buildingNoSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:minHeight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/buildingNoTextView"
                app:layout_constraintTop_toTopOf="@+id/buildingNoTextView" />

            <TextView
                android:id="@+id/capacityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:minWidth="100dp"
                android:minHeight="40dp"
                android:text="@string/capacity_text"
                app:layout_constraintStart_toStartOf="@+id/buildingNoTextView"
                app:layout_constraintTop_toBottomOf="@+id/buildingNoTextView" />

            <EditText
                android:id="@+id/capacityEditTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/capacity_hint"
                android:inputType="number"
                android:maxLength="3"
                android:minWidth="150dp"
                android:minHeight="40dp"
                app:layout_constraintStart_toStartOf="@+id/buildingNoSpinner"
                app:layout_constraintTop_toTopOf="@+id/capacityTextView" />

            <TextView
                android:id="@+id/equipmentsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:minWidth="100dp"
                android:minHeight="40dp"
                android:text="@string/equipments_text"
                app:layout_constraintStart_toStartOf="@+id/capacityTextView"
                app:layout_constraintTop_toBottomOf="@+id/capacityTextView" />

            <CheckBox
                android:id="@+id/acCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/ac_text"
                app:layout_constraintStart_toStartOf="@+id/capacityEditTextNumber"
                app:layout_constraintTop_toTopOf="@+id/equipmentsTextView" />

            <CheckBox
                android:id="@+id/projectorCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/projector_text"
                app:layout_constraintStart_toStartOf="@+id/acCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/acCheckBox" />

            <TextView
                android:id="@+id/boardsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minWidth="100dp"
                android:minHeight="40dp"
                android:text="@string/boards_text"
                app:layout_constraintStart_toStartOf="@+id/equipmentsTextView"
                app:layout_constraintTop_toTopOf="@+id/boardsSpinner" />

            <Spinner
                android:id="@+id/boardsSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:minWidth="150dp"
                android:minHeight="40dp"
                app:layout_constraintStart_toStartOf="@+id/projectorCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/projectorCheckBox" />

            <TextView
                android:id="@+id/datePickerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:minWidth="100dp"
                android:minHeight="40dp"
                android:text="@string/table_header_date"
                app:layout_constraintStart_toStartOf="@+id/boardsTextView"
                app:layout_constraintTop_toBottomOf="@+id/boardsTextView" />

            <TextView
                android:id="@+id/datePickTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minWidth="150dp"
                android:minHeight="40dp"
                android:text="@string/date_hint"
                app:layout_constraintStart_toStartOf="@+id/boardsSpinner"
                app:layout_constraintTop_toTopOf="@+id/datePickerTextView" />

            <TextView
                android:id="@+id/timePickerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:minWidth="100dp"
                android:minHeight="40dp"
                android:text="@string/time_slot_text"
                app:layout_constraintStart_toStartOf="@+id/datePickerTextView"
                app:layout_constraintTop_toBottomOf="@+id/datePickerTextView" />

            <Spinner
                android:id="@+id/timeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:minHeight="40dp"
                app:layout_constraintStart_toStartOf="@+id/datePickTextView"
                app:layout_constraintTop_toTopOf="@+id/timePickerTextView" />

            <Button
                android:id="@+id/searchRoomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/search_room_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timePickerTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>