<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recordsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constRecordHeading"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:maxWidth="65dp"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/buildingHeadTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:gravity="center"
            android:maxLines="100"
            android:minHeight="70dp"
            android:text="@string/table_header_building"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/roomHeadTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/roomHeadTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/table_header_room"
            app:layout_constraintBottom_toTopOf="@+id/dateHeadTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buildingHeadTextView" />

        <TextView
            android:id="@+id/dateHeadTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/table_header_date"
            app:layout_constraintBottom_toTopOf="@+id/startTimeHeadTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomHeadTextView" />

        <TextView
            android:id="@+id/startTimeHeadTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="100"
            android:minHeight="70dp"
            android:text="@string/table_header_start_time"
            app:layout_constraintBottom_toTopOf="@+id/endTimeHeadTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateHeadTextView" />

        <TextView
            android:id="@+id/endTimeHeadTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/table_header_end_time"
            app:layout_constraintBottom_toTopOf="@+id/courseHeadTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startTimeHeadTextView" />

        <TextView
            android:id="@+id/courseHeadTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/table_header_course"
            app:layout_constraintBottom_toTopOf="@+id/routineHeadTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endTimeHeadTextView" />

        <TextView
            android:id="@+id/routineHeadTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/table_header_routine"
            app:layout_constraintBottom_toTopOf="@+id/noteHeadTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseHeadTextView" />

        <TextView
            android:id="@+id/noteHeadTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/table_header_notes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routineHeadTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/constRecordHeading"
        android:layout_toRightOf="@id/constRecordHeading"
        android:padding="5dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/rec_RecyclerView"
        android:layout_alignRight="@id/rec_RecyclerView"
        android:layout_alignBottom="@id/rec_RecyclerView"
        android:clickable="true"
        android:contentDescription="@string/fAB_records"
        android:focusable="true"
        android:src="@android:drawable/ic_delete"
        app:useCompatPadding="true" />

</RelativeLayout>